a1/tests/reject/11.ul
boolean 1or2() {

}
